[package]
name = "foo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rust_wbi =  { path = "./wbi" }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = "0.4.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]}
[dev-dependencies]

[features]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true

